# speech-emotion-clustering

./: .env.example  .gitignore  README.md  REFACTORING_COMPLETE.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: clustering_config.yaml  llm_analysis_config.yaml  llm_config.yaml  pipeline_config.yaml  topic_modeling_config.yaml  train_config.yaml
src/SpeechCueLLM/: extract_audio_feature.py  postprocess_audio_feature.py
src/analysis/: __init__.py  llm_analyzer.py
src/clustering/: clustering.py  hyperparameter_search.py
src/core/: __init__.py  main.py  pipeline.py
src/dataset/: loader.py
src/llm/: __init__.py  llm_analysis.py
src/segmentation/: segmentation.py  whisperx.py
src/topic_modeling/: __init__.py  optimaizer_umap_cons_weight.py  topic_modeling.py
src/topic_modeling/ale/: optimezr_kMedoide.py  optimizer2.py  parallel.py  prerocessing_with_embed.py  scdeed.py
src/training/: wav2vec2_trainer.py
